--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
-body {background-color:tan;}
-h1{color:green;}
-
-
+body {background-color:black;font-family:arial;color:white;
+display:grid;
+place-items:center;}
+h1{color:grey;font-family:verdana}
+.maindiv {
+    background-color: white;
+    color: black;
+    width: 300px;
+    padding: 20px;
+    border-radius: 25px;
+    align: center;
+}
+footer{
+    margin: 10px 0;
+}
